feat: rewrite auth

--- a/Client/Pages/Homepage.razor
+++ b/Client/Pages/Homepage.razor
@@ -1,5 +1,7 @@
 ﻿@page "/"
+@using Microsoft.AspNetCore.Authorization
 @layout NullLayout
+@attribute [AllowAnonymous]
 
 <div class="h-screen overflow-y-auto bg-[#161616]">
     <!-- Header -->
@@ -43,11 +45,11 @@
         <div class=" pt-[12%] font-medium text-[#999]">Build by using</div>
 
         <div class="mt-4 flex flex-row gap-4">
-            <img src="images/net.svg"/>
-            <img src="images/csharp.svg"/>
-            <img src="images/blazor.svg"/>
-            <img src="images/tailwind.svg"/>
-            <img src="images/postqres.svg"/>
+            <img src="images/net.svg" alt="net"/>
+            <img src="images/csharp.svg" alt="csharp"/>
+            <img src="images/blazor.svg" alt="blazor"/>
+            <img src="images/tailwind.svg" alt="tailwind"/>
+            <img src="images/postqres.svg" alt="postqres"/>
         </div>
     </div>
 
