--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -10,5 +10,7 @@
 @using System.Text.Encodings
 @using Client
 @using Client.Layout
+@using Client.Models
 @using Blazored.LocalStorage
+@using System.Net.Http.Headers
 
