--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -11,6 +11,8 @@
 @using Client
 @using Client.Layout
 @using Client.Models
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
 @using Blazored.LocalStorage
 @using System.Net.Http.Headers
 
