--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -11,6 +11,7 @@
 @using Client
 @using Client.Layout
 @using Client.Models
+@using Client.Utils
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
 @using Blazored.LocalStorage
