--- a/Client/Pages/Dashboard/Dashboard.razor
+++ b/Client/Pages/Dashboard/Dashboard.razor
@@ -1,6 +1,6 @@
 @page "/dashboard"
-@attribute [Authorize]
 @layout NullLayout
+@attribute [AllowAnonymous]
 @inject NavigationManager Navigation
 @inject ILocalStorageService LocalStorage
 
