--- a/Client/Layout/NotFoundLayout.razor
+++ b/Client/Layout/NotFoundLayout.razor
@@ -9,9 +9,7 @@
         </p>
         <p class="mb-8">But dont worry, you can find plenty of other things on our homepage.</p>
         <a href="/">
-            <button class="px-4 inline py-2 text-sm font-medium leading-5 shadow text-white transition-colors duration-150 border border-transparent rounded-lg focus:outline-none focus:shadow-outline-blue bg-blue-600 active:bg-blue-600 hover:bg-blue-700">
-                back to homepage
-            </button>
+            <button class="px-4 inline py-2 text-sm font-medium leading-5 shadow text-white transition-colors duration-150 border border-transparent rounded-lg focus:outline-none focus:shadow-outline-blue bg-blue-600 active:bg-blue-600 hover:bg-blue-700">back to homepage</button>
         </a>
     </div>
         
