--- a/Client/Pages/Homepage.razor
+++ b/Client/Pages/Homepage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@layout NullLayout
 
 <div class="h-screen overflow-y-auto bg-[#161616]">
     <!-- Header -->
@@ -31,7 +32,10 @@
                 </span>
                 Login now
             </a>
-
+            
+            <a class="hidden" href="dashboard">
+            </a>
+            
             <a class="blue-button gap-2 rounded-3xl bg-[--primary-8] text-white hover:brightness-90" href="sign-up">
                 Register
                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 256 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"></path></svg>
@@ -51,3 +55,7 @@
     </div>
 
 </div>
+
+@code {
+    
+}
